2022-08-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	[eqn]: Drop support for undocumented '-D' option.  It has been
	undocumented, and issued a warning of its obsolescence upon use,
	for 30 years, since groff 1.06 (September 1992).  That's plenty
	long enough for a deprecation cycle.

	* src/preproc/eqn/main.cpp (main): Do it.
	* NEWS: Add item.

2022-08-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man]: (EX, EE): Always break line, even if call invalid.

	* tmac/an.tmac (EX, EE):
	* tmac/an-ext.tmac (EX, EE): Do it.  Ingo Schwarze pointed out
	that page authors will expect breaking semantics from these
	macros even if using them in an ill-formed way.  In a
	well-formed document, the breaks are redundant but harmless (the
	later `nf` and `fi` requests, respectively, also cause breaks).

2022-08-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Trivially refactor.

	* tmac/doc.tmac:
	* tmac/mdoc/doc-common: Rename string `doc-command-name` to
	`doc-topic-name`; the former is misleading for man pages not in
	sections 1, 6, or 8.

2022-08-25  Bjarni Ingi Gislason <bjarniig@vortex.is>

	* man/groff_char.7.man: Fix bad example syntax.

	Fixes <https://savannah.gnu.org/bugs/?62959>.

2022-08-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Trivially refactor.

	* tmac/mdoc/doc-common:
	* tmac/mdoc/doc-ditroff:
	* tmac/mdoc/doc-nroff: Stop using "Null" as an empty string
	indicator when comparing a string interpolation to an empty
	parameter will serve just as well; it is also more idiomatic.
	The string in question, `doc-section`, is never formatted if it
	is empty anyway; the very tests at issue, which populate
	`doc-header-string`, ensure this.

2022-08-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::set_family): Throw error
	if user requests a font family that (when combined with the
	current style) can't be resolved to a real font name.  Fixes a